--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,23 +1,9 @@
 <!--index.wxml-->
 <view class="container">
 
-  <view class="block">
-    <button bindtap="openBluetooth">打开蓝牙</button>
-    <button bindtap="getConnectedBluetoothDevices">获取蓝牙设备</button>
-  </view>
+  <button class="button" bindtap="openBluetoothAdapter">初始化小程序蓝牙模块</button>
+  <button class="button" bindtap="getConnectedBluetoothDevices">获取手机系统已连接的蓝牙设备</button>
+  <button class="button" bindtap="createBLEConnection">建立BLE连接</button>
+  <button class="button" bindtap="writeBLECharacteristicValue">向蓝牙设备发送数据</button>
 
-  <view class="block">
-    <button bindtap="startBluetoothDevicesDiscovery">搜索蓝牙设备</button>
-    <button bindtap="createBLEConnection">建立连接</button>
-  </view>
-  <view class="block">
-    <text>这里输入蓝牙地址</text>
-  </view>
-    <view class="block">
-    <button bindtap="writeBLECharacteristicValue">发送数据</button>
-    <button bindtap="readBLECharacteristicValue">读取数据</button>
-  </view>
-  <view class="block">
-    <text>{{log}}</text>
-  </view>
 </view>
