--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,22 +1,9 @@
 /**index.wxss**/
-.userinfo {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
-}
-
 .block {
   width: 100%;
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: left;
   justify-content: space-between;
   box-sizing: border-box;
   color: #000;
@@ -34,4 +21,10 @@
 .label {
   width: 100%;
   padding: 30rpx;
+} 
+
+.button {
+  margin: 40rpx 0rpx 0rpx 0rpx;
+  width: 100%;
+  padding: 5rpx;
 } 
